feat: add comments crud
